--- a/src/home.html
+++ b/src/home.html
@@ -92,10 +92,10 @@
           BSECE4D
         </p>
         <div class="footer-icons">
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-github"></i></a>
+          <a href="#" aria-label="fb-link"><i class="fa fa-facebook"></i></a>
+          <a href="#" aria-label="tw-link"><i class="fa fa-twitter"></i></a>
+          <a href="#" aria-label="lin-link"><i class="fa fa-linkedin"></i></a>
+          <a href="#" aria-label="git-link"><i class="fa fa-github"></i></a>
         </div>
       </div>
     </footer>
