--- a/src/home.html
+++ b/src/home.html
@@ -30,6 +30,7 @@
         </ul>
       </div>
     </div>
+
     <div class="header">
       <h1>Welcome to the <span class="ece">ECE</span> Department</h1>
       <p class="head-p">
@@ -42,20 +43,54 @@
       <button class="nws">News</button>
       <button class="orgs">About Us</button>
     </div>
+
+    <h1 class="nw1">NEWS SECTION</h1>
     <div class="midsec">
-      <div class="news">
-        <h2>News</h2>
-        <p>News 1</p>
-        <p>News 2</p>
-        <p>News 3</p>
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>OECES GA: 2023</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn">Read More</button>
+      </div>
+
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>COE</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn">Read More</button>
+      </div>
+
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>COE</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn">Read More</button>
       </div>
     </div>
+
     <div class="lastsec">
       <div class="org">
-        <h2>Affiliated Organizations</h2>
-        <p>Logo 1</p>
-        <p>Logo 2</p>
-        <p>Logo 3</p>
+        <h2>Be One With <span class="ece">ECE</span></h2>
+        <p class="desc">
+          With TUP's Free Education, you can experience top-tier Education with
+          our top-grade faculty. Enroll Now!
+        </p>
+        <button class="click">Enroll Now</button>
       </div>
     </div>
 
