--- a/src/about.html
+++ b/src/about.html
@@ -28,5 +28,92 @@
         <li><a href="contacts.html">CONTACTS</a></li>
       </ul>
     </div>
+
+    <div class="abouthead">
+      <h1>ABOUT ECE DEPARTMENT</h1>
+      <p class="head-p">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam
+        vero exercitationem dolorem. Odio aut quisquam ipsum nesciunt temporibus
+        odit sit, quas consequuntur architecto ipsam, vitae iusto eligendi
+        ratione ut.
+      </p>
+    </div>
+
+    <div class="vision">
+      <h3>VISION</h3>
+      <p>
+        To be a leading department in the field of Electronics and Communication
+        Engineering, recognized for its excellence in teaching, research and
+        innovation.
+      </p>
+    </div>
+
+    <div class="mission">
+      <h3>MISSION</h3>
+      <p>
+        To be a leading department in the field of Electronics and Communication
+        Engineering, recognized for its excellence in teaching, research and
+        innovation.
+      </p>
+    </div>
+
+    <div class="slider-container">
+      <div class="slider">
+        <div class="slide">
+          <img src="https://via.placeholder.com/150x150" alt="Profile Image" />
+          <h3>John Doe</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+            volutpat, est ut facilisis gravida, lorem velit fringilla magna, nec
+            faucibus justo felis eget quam.
+          </p>
+        </div>
+      </div>
+      <div class="slider-controls">
+        <button class="prev-slide">&#10094;</button>
+        <button class="next-slide">&#10095;</button>
+      </div>
+    </div>
+
+    <footer class="footer-distributed">
+      <div class="footer-left">
+        <h3>ECE<span>Department</span></h3>
+        <p class="footer-links">
+          <a href="#" class="link-1">Home</a>
+          <a href="#">Blog</a>
+          <a href="#">Pricing</a>
+          <a href="#">About</a>
+          <a href="#">FAQ</a>
+          <a href="#">Contact</a>
+        </p>
+        <p class="footer-company-name">All Rights Reserved © 2023</p>
+      </div>
+      <div class="footer-center">
+        <div>
+          <i class="fa fa-map-marker"></i>
+          <p><span>Ayala Boulevard, Ermita</span> Manila, Philippines</p>
+        </div>
+        <div>
+          <i class="fa fa-phone"></i>
+          <p>+63 (2) 5301.3042</p>
+        </div>
+        <div>
+          <i class="fa fa-envelope"></i>
+          <p><a href="mailto:support@company.com">coe-ece@tup.edu.ph</a></p>
+        </div>
+      </div>
+      <div class="footer-right">
+        <p class="footer-company-about">
+          <span>Neil Carlos C. Santos</span>
+          BSECE4D
+        </p>
+        <div class="footer-icons">
+          <a href="#" aria-label="fb-link"><i class="fa fa-facebook"></i></a>
+          <a href="#" aria-label="tw-link"><i class="fa fa-twitter"></i></a>
+          <a href="#" aria-label="lin-link"><i class="fa fa-linkedin"></i></a>
+          <a href="#" aria-label="git-link"><i class="fa fa-github"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
