--- a/src/home.html
+++ b/src/home.html
@@ -41,10 +41,13 @@
         professional goals.
       </p>
       <button class="nws">News</button>
-      <button class="orgs">About Us</button>
+      <button class="orgs" type="button">
+        <!-- when pressed, it will go to the about us page -->
+        <a href="about.html">About Us</a>
+      </button>
     </div>
 
-    <h1 class="nw1">NEWS SECTION</h1>
+    <h1 class="nw1">ECE CORNER</h1>
     <div class="midsec">
       <div class="box-1">
         <img src="/assets/coeLogo.jpg" alt="coeLogo" />
@@ -55,12 +58,12 @@
           reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
           explicabo quo. eum.
         </p>
-        <button class="btn">Read More</button>
+        <button class="btn" type="button">Read More</button>
       </div>
 
       <div class="box-1">
         <img src="/assets/coeLogo.jpg" alt="coeLogo" />
-        <h3>COE</h3>
+        <h3>ECE BOARDS: OCT 2023</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
           explicabo at labore eum minus esse. Dicta veritatis facere fugit
@@ -72,7 +75,7 @@
 
       <div class="box-1">
         <img src="/assets/coeLogo.jpg" alt="coeLogo" />
-        <h3>COE</h3>
+        <h3>APPRECIATE 2023</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
           explicabo at labore eum minus esse. Dicta veritatis facere fugit
@@ -90,7 +93,7 @@
           With TUP's Free Education, you can experience top-tier Education with
           our top-grade faculty. Enroll Now!
         </p>
-        <button class="click">Enroll Now</button>
+        <button class="click">APPLY NOW</button>
       </div>
     </div>
 
