--- a/src/about.html
+++ b/src/about.html
@@ -57,21 +57,109 @@
       </p>
     </div>
 
-    <div class="slider-container">
-      <div class="slider">
-        <div class="slide">
-          <img src="https://via.placeholder.com/150x150" alt="Profile Image" />
-          <h3>John Doe</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-            volutpat, est ut facilisis gravida, lorem velit fringilla magna, nec
-            faucibus justo felis eget quam.
-          </p>
+    <div class="faculty">
+      <h2>Meet the <span class="ece">FACULTY</span></h2>
+    </div>
+
+    <div class="slider">
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Timothy M. Amado</h3>
+        <h6>Faculty Head</h6>
+        <p>
+          Smart Edge Instructor and <br />
+          Faculty Head of the ECE Department
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
         </div>
       </div>
-      <div class="slider-controls">
-        <button class="prev-slide">&#10094;</button>
-        <button class="next-slide">&#10095;</button>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Timothy M. Amado</h3>
+        <h6>Faculty Head</h6>
+        <p>
+          Smart Edge Instructor and <br />
+          Faculty Head of the ECE Department
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Nilo Arago</h3>
+        <h6>COE College Dean</h6>
+        <p>
+          Head of the College of Engineering <br />
+          and Batch Research Adviser
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Edmund Monilar</h3>
+        <h6>Professor</h6>
+        <p>
+          Electives 1 and 2 Instructor<br />
+          and Front-end developer
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
       </div>
     </div>
 
