added index html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECE Department</title>
   </head>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/src/style.css" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -24,9 +24,9 @@
           </div>
         </a>
         <ul>
-          <li><a href="home.html">HOME</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="contacts.html">CONTACTS</a></li>
+          <li><a href="/src/home.html">HOME</a></li>
+          <li><a href="/src/about.html">ABOUT</a></li>
+          <li><a href="/src/contacts.html">CONTACTS</a></li>
         </ul>
       </div>
     </div>
@@ -43,7 +43,7 @@
       <button class="nws">News</button>
       <button class="orgs" type="button">
         <!-- when pressed, it will go to the about us page -->
-        <a href="about.html">About Us</a>
+        <a href="/src/about.html">About Us</a>
       </button>
     </div>
 
