--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COE || Department</title>
+    <title>ECE DEPARTMENT</title>
   </head>
   <link rel="stylesheet" href="style.css" />
   <link
