--- a/src/about.html
+++ b/src/about.html
@@ -40,21 +40,110 @@
     </div>
 
     <div class="vision">
-      <h3>VISION</h3>
-      <p>
-        To be a leading department in the field of Electronics and Communication
-        Engineering, recognized for its excellence in teaching, research and
-        innovation.
-      </p>
-    </div>
+      <div class="services">
+        <h1 class="head">Subjects Offered</h1>
 
-    <div class="mission">
-      <h3>MISSION</h3>
-      <p>
-        To be a leading department in the field of Electronics and Communication
-        Engineering, recognized for its excellence in teaching, research and
-        innovation.
-      </p>
+        <div class="box-container">
+          <div class="box2">
+            <img src="/assets/calc.png" alt="" />
+            <h3>Calculus 1&2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/feedback.png" alt="" />
+            <h3>Feedback Control Systems</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/admath.png" alt="" />
+            <h3>Advanced Math for ECE</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/prog.png" alt="" />
+            <h3>Computer Programming</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/cpu.png" alt="" />
+            <h3>Electronics 1-3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/diff.png" alt="" />
+            <h3>Differential Equations</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/comms.png" alt="" />
+            <h3>Communications</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/emags.png" alt="" />
+            <h3>Electromagnetics</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/circ.png" alt="" />
+            <h3>Circuits</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+          <div class="box2">
+            <img src="/assets/signals.png" alt="" />
+            <h3>Signals</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="faculty">
