--- a/src/home.html
+++ b/src/home.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="home.html">HOME</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="contacts.html">CONTACTS</a></li>
+          <li><a href="apply.html">APPLY</a></li>
         </ul>
       </div>
     </div>
@@ -93,7 +93,8 @@
           With TUP's Free Education, you can experience top-tier Education with
           our top-grade faculty. Enroll Now!
         </p>
-        <button class="click">APPLY NOW</button>
+        <button class="click"><a href="/src/apply.html">APPLY NOW</a></button>
+        <!-- when pressed, it will go to the apply page -->
       </div>
     </div>
 
