--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="/src/home.html">HOME</a></li>
           <li><a href="/src/about.html">ABOUT</a></li>
-          <li><a href="/src/contacts.html">CONTACTS</a></li>
+          <li><a href="/src/apply.html">APPLY</a></li>
         </ul>
       </div>
     </div>
@@ -93,7 +93,7 @@
           With TUP's Free Education, you can experience top-tier Education with
           our top-grade faculty. Enroll Now!
         </p>
-        <button class="click">APPLY NOW</button>
+        <button class="click"><a href="/src/apply.html">APPLY NOW</a></button>
       </div>
     </div>
 
