--- a/src/about.html
+++ b/src/about.html
@@ -25,7 +25,7 @@
       <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contacts.html">CONTACTS</a></li>
+        <li><a href="apply.html">APPLY</a></li>
       </ul>
     </div>
 
@@ -41,7 +41,7 @@
 
     <div class="vision">
       <div class="services">
-        <h1 class="head">Subjects Offered</h1>
+        <h1 class="head">SUBJECTS OFFERED</h1>
 
         <div class="box-container">
           <div class="box2">
