--- a/src/apply.html
+++ b/src/apply.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contacts.html">CONTACTS</a></li>
+        <li><a href="apply.html">APPLY</a></li>
       </ul>
     </div>
   </body>
