--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
         they work closely with students to help them achieve their academic and
         professional goals.
       </p>
-      <button class="nws">News</button>
+      <button class="nws" type="button">
+        <!-- when pressed, it will go to the apply page -->
+        <a href="/src/apply.html">Apply</a>
+      </button>
       <button class="orgs" type="button">
         <!-- when pressed, it will go to the about us page -->
-        <a href="/src/about.html">About Us</a>
+        <a href="/src/about.html">About ECE</a>
       </button>
     </div>
 
