--- a/src/apply.html
+++ b/src/apply.html
@@ -27,5 +27,65 @@
         <li><a href="apply.html">APPLY</a></li>
       </ul>
     </div>
+    <div class="bg"></div>
+    <form>
+      <div class="form">
+        <h1>INTERESTED?</h1>
+        <p>Please fill in this form to apply for the ECE department.</p>
+        <hr />
+
+        <label for="name"><b>Name</b></label>
+        <input type="text" placeholder="Enter Name" name="name" required />
+
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required />
+
+        <label for="phone"><b>Phone</b></label>
+        <input type="text" placeholder="Enter Phone" name="phone" required />
+
+        <label for="address"><b>Address</b></label>
+        <input
+          type="text"
+          placeholder="Enter Address"
+          name="address"
+          required
+        />
+
+        <label for="city"><b>City</b></label>
+        <input type="text" placeholder="Enter City" name="city" required />
+
+        <label for="state"><b>State</b></label>
+        <input type="text" placeholder="Enter State" name="state" required />
+
+        <label for="zip"><b>Zip</b></label>
+        <input type="text" placeholder="Enter Zip" name="zip" required />
+
+        <label for="gpa"><b>School</b></label>
+        <input type="text" placeholder="Enter GPA" name="gpa" required />
+
+        <label for="sat"><b>Enter Highschool GPA</b></label>
+        <input type="text" placeholder="Enter GPA" name="sat" required />
+
+        <label for="transcript"
+          ><b>Upload Transcript of Records (SHS Report Card)</b></label
+        >
+        <input
+          title="Upload Transcript of Records (SHS Report Card)"
+          type="file"
+          name="transcript"
+          accept=".pdf,.doc,.docx,.jpg,.jpeg,.png"
+          required
+        />
+
+        <label for="recommendation"><b>Why do you want to join ECE?</b></label>
+        <input
+          type="text"
+          placeholder="Enter Recommendation  "
+          name="recommendation"
+          required
+        />
+        <button type="submit" class="registerbtn">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
