--- a/src/home.html
+++ b/src/home.html
@@ -40,7 +40,7 @@
         they work closely with students to help them achieve their academic and
         professional goals.
       </p>
-      <button class="nws">News</button>
+      <button class="nws"><a href="apply.html">Apply</a></button>
       <button class="orgs" type="button">
         <!-- when pressed, it will go to the about us page -->
         <a href="about.html">About Us</a>
