--- a/HTML Only/about.html
+++ b/HTML Only/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ECE DEPARTMENT</title>
   </head>
   <link
     rel="stylesheet"
@@ -24,8 +24,272 @@
       <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contacts.html">CONTACTS</a></li>
+        <li><a href="apply.html">APPLY</a></li>
       </ul>
     </div>
+
+    <div class="abouthead">
+      <h1>ABOUT ECE DEPARTMENT</h1>
+      <p class="head-p">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam
+        vero exercitationem dolorem. Odio aut quisquam ipsum nesciunt temporibus
+        odit sit, quas consequuntur architecto ipsam, vitae iusto eligendi
+        ratione ut.
+      </p>
+    </div>
+
+    <div class="vision">
+      <div class="services">
+        <h1 class="head">SUBJECTS OFFERED</h1>
+
+        <div class="box-container">
+          <div class="box2">
+            <img src="/assets/calc.png" alt="" />
+            <h3>Calculus 1&2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/feedback.png" alt="" />
+            <h3>Feedback Control Systems</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/admath.png" alt="" />
+            <h3>Advanced Math for ECE</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/prog.png" alt="" />
+            <h3>Computer Programming</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/cpu.png" alt="" />
+            <h3>Electronics 1-3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/diff.png" alt="" />
+            <h3>Differential Equations</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/comms.png" alt="" />
+            <h3>Communications</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/emags.png" alt="" />
+            <h3>Electromagnetics</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+
+          <div class="box2">
+            <img src="/assets/circ.png" alt="" />
+            <h3>Circuits</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+          <div class="box2">
+            <img src="/assets/signals.png" alt="" />
+            <h3>Signals</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              commodi?
+            </p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="faculty">
+      <h2>Meet the <span class="ece">FACULTY</span></h2>
+    </div>
+
+    <div class="slider">
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Timothy M. Amado</h3>
+        <h6>Faculty Head</h6>
+        <p>
+          Smart Edge Instructor and <br />
+          Faculty Head of the ECE Department
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Timothy M. Amado</h3>
+        <h6>Faculty Head</h6>
+        <p>
+          Smart Edge Instructor and <br />
+          Faculty Head of the ECE Department
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Nilo Arago</h3>
+        <h6>COE College Dean</h6>
+        <p>
+          Head of the College of Engineering <br />
+          and Batch Research Adviser
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <span class="pro">ENGR</span>
+        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <h3 class="name">Edmund Monilar</h3>
+        <h6>Professor</h6>
+        <p>
+          Electives 1 and 2 Instructor<br />
+          and Front-end developer
+        </p>
+        <div class="buttons">
+          <button class="primary">Message</button>
+          <button class="primary ghost">Following</button>
+        </div>
+        <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+            <li>Electronics</li>
+            <li>Mathematics</li>
+            <li>Sciences</li>
+            <li>Leadership</li>
+            <li>Teaching</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer-distributed">
+      <div class="footer-left">
+        <h3>ECE<span>Department</span></h3>
+        <p class="footer-links">
+          <a href="#" class="link-1">Home</a>
+          <a href="#">Blog</a>
+          <a href="#">Pricing</a>
+          <a href="#">About</a>
+          <a href="#">FAQ</a>
+          <a href="#">Contact</a>
+        </p>
+        <p class="footer-company-name">All Rights Reserved © 2023</p>
+      </div>
+      <div class="footer-center">
+        <div>
+          <i class="fa fa-map-marker"></i>
+          <p><span>Ayala Boulevard, Ermita</span> Manila, Philippines</p>
+        </div>
+        <div>
+          <i class="fa fa-phone"></i>
+          <p>+63 (2) 5301.3042</p>
+        </div>
+        <div>
+          <i class="fa fa-envelope"></i>
+          <p><a href="mailto:support@company.com">coe-ece@tup.edu.ph</a></p>
+        </div>
+      </div>
+      <div class="footer-right">
+        <p class="footer-company-about">
+          <span>Neil Carlos C. Santos</span>
+          BSECE4D
+        </p>
+        <div class="footer-icons">
+          <a href="#" aria-label="fb-link"><i class="fa fa-facebook"></i></a>
+          <a href="#" aria-label="tw-link"><i class="fa fa-twitter"></i></a>
+          <a href="#" aria-label="lin-link"><i class="fa fa-linkedin"></i></a>
+          <a href="#" aria-label="git-link"><i class="fa fa-github"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
