--- a/HTML Only/home.html
+++ b/HTML Only/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COE || ECE Department</title>
+    <title>ECE Department</title>
   </head>
   <link
     rel="stylesheet"
@@ -25,10 +25,11 @@
         <ul>
           <li><a href="home.html">HOME</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="contacts.html">CONTACTS</a></li>
+          <li><a href="apply.html">APPLY</a></li>
         </ul>
       </div>
     </div>
+
     <div class="header">
       <h1>Welcome to the <span class="ece">ECE</span> Department</h1>
       <p class="head-p">
@@ -38,23 +39,61 @@
         they work closely with students to help them achieve their academic and
         professional goals.
       </p>
-      <button class="nws">News</button>
-      <button class="orgs">About Us</button>
+      <button class="nws"><a href="apply.html">Apply</a></button>
+      <button class="orgs" type="button">
+        <!-- when pressed, it will go to the about us page -->
+        <a href="about.html">About Us</a>
+      </button>
     </div>
+
+    <h1 class="nw1">ECE CORNER</h1>
     <div class="midsec">
-      <div class="news">
-        <h2>News</h2>
-        <p>News 1</p>
-        <p>News 2</p>
-        <p>News 3</p>
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>OECES GA: 2023</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn" type="button">Read More</button>
+      </div>
+
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>ECE BOARDS: OCT 2023</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn">Read More</button>
+      </div>
+
+      <div class="box-1">
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <h3>APPRECIATE 2023</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+          explicabo at labore eum minus esse. Dicta veritatis facere fugit
+          reiciendis voluptate, laudantium culpa quod cumque. Iure quis aperiam
+          explicabo quo. eum.
+        </p>
+        <button class="btn">Read More</button>
       </div>
     </div>
+
     <div class="lastsec">
       <div class="org">
-        <h2>Affiliated Organizations</h2>
-        <p>Logo 1</p>
-        <p>Logo 2</p>
-        <p>Logo 3</p>
+        <h2>Be One With <span class="ece">ECE</span></h2>
+        <p class="desc">
+          With TUP's Free Education, you can experience top-tier Education with
+          our top-grade faculty. Enroll Now!
+        </p>
+        <button class="click"><a href="/src/apply.html">APPLY NOW</a></button>
+        <!-- when pressed, it will go to the apply page -->
       </div>
     </div>
 
@@ -91,10 +130,10 @@
           BSECE4D
         </p>
         <div class="footer-icons">
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-github"></i></a>
+          <a href="#" aria-label="fb-link"><i class="fa fa-facebook"></i></a>
+          <a href="#" aria-label="tw-link"><i class="fa fa-twitter"></i></a>
+          <a href="#" aria-label="lin-link"><i class="fa fa-linkedin"></i></a>
+          <a href="#" aria-label="git-link"><i class="fa fa-github"></i></a>
         </div>
       </div>
     </footer>
