--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </button>
       <button class="orgs" type="button">
         <!-- when pressed, it will go to the about us page -->
-        <a href="/src/about.html">About ECE</a>
+        <a href="/src/about.html">About Us</a>
       </button>
     </div>
 
