--- a/src/apply.html
+++ b/src/apply.html
@@ -80,7 +80,7 @@
         <label for="recommendation"><b>Why do you want to join ECE?</b></label>
         <input
           type="text"
-          placeholder="Enter Recommendation  "
+          placeholder="Enter Essay"
           name="recommendation"
           required
         />
