--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
           our top-grade faculty. Enroll Now!
         </p>
         <button class="click"><a href="/src/apply.html">APPLY NOW</a></button>
+        <!-- when pressed, it will go to the apply page -->
       </div>
     </div>
 
+    <!-- footer codes -->
     <footer class="footer-distributed">
       <div class="footer-left">
         <h3>ECE<span>Department</span></h3>
