--- a/src/about.html
+++ b/src/about.html
@@ -152,13 +152,13 @@
 
     <div class="slider">
       <div class="card-container">
-        <span class="pro">ENGR</span>
+        <span class="pro">Student</span>
         <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
-        <h3 class="name">Timothy M. Amado</h3>
-        <h6>Faculty Head</h6>
+        <h3 class="name">Neil Carlos C. Santos</h3>
+        <h6>BSECE4D</h6>
         <p>
-          Smart Edge Instructor and <br />
-          Faculty Head of the ECE Department
+          A 4th year student <br />
+          and an aspiring engineer
         </p>
         <div class="buttons">
           <button class="primary">Message</button>
@@ -167,11 +167,11 @@
         <div class="skills">
           <h6>Skills</h6>
           <ul>
-            <li>Electronics</li>
+            <li>Front-end Development</li>
             <li>Mathematics</li>
-            <li>Sciences</li>
-            <li>Leadership</li>
-            <li>Teaching</li>
+            <li>Data Science</li>
+            <li>UI/UX Design</li>
+            <li>Critical Thinking</li>
           </ul>
         </div>
       </div>
