--- a/HTML Only/home.html
+++ b/HTML Only/home.html
@@ -98,7 +98,12 @@
     </div>
 
     <div class="location">
-      <h5 class="loctext">Our location</h5>
+      <h5>OUR LOCATION</h5>
+      <h6>San Marcelino St, Ayala Blvd, Ermita, Manila, 1000</h6>
+      <p>
+        Telephone: (+63) 253 013 001 || E-mail: itso@tup.edu.ph /
+        tup@tup.edu.ph.
+      </p>
     </div>
 
     <footer class="footer-distributed">
